Make old /observationlevels endpoint usable